cmake_minimum_required(VERSION 3.8)
project(burningman)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp Adafruit_NeoPixel.cpp Adafruit_NeoPixel.h LedAssignments.h)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2GFX REQUIRED SDL2_gfx>=1.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2GFX_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2GFX_LIBRARIES})
